--- a/css/agency.css
+++ b/css/agency.css
@@ -151,8 +151,10 @@ fieldset[disabled] .btn-xl.active {
   border-color: transparent;
 }
 .navbar-custom .navbar-brand {
-  color: #fed136;
-  font-family: "Kaushan Script", "Helvetica Neue", Helvetica, Arial, cursive;
+  color: rgb(250,250,0);
+  /*color: #fed136;
+/*  font-family: "Roboto Black";*/
+  font-family: "Roboto Black", "Helvetica Neue", Helvetica, Arial, cursive;
 }
 .navbar-custom .navbar-brand:hover,
 .navbar-custom .navbar-brand:focus,
